Linear Regression - multivariable Gradient descent

--- a/Linear Regression/Linear_regression_with_two_variables_mycode.ipynb
+++ b/Linear Regression/Linear_regression_with_two_variables_mycode.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Linear regression with two variables Gradient Descent\n",
+    "##Code written by Uday kiran Bakka"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
