implement Naive Bayes Classifier

--- a/Decision Trees/Decision Tree Implementation.ipynb
+++ b/Decision Trees/Decision Tree Implementation.ipynb
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -915,12 +915,16 @@
     "            else:\n",
     "                false_tree.append(x[i])\n",
     "                false_output.append(y[i])\n",
-    "        #storing important data into tree\n",
+    "\n",
+    "        #storing important data into tree Node\n",
     "        Node.split_feature=split_gini_feature\n",
     "        Node.split_class=split_gini_class\n",
     "        Node.true_tree=self.BuildTree(np.array(true_tree),true_output)\n",
     "        Node.false_tree=self.BuildTree(np.array(false_tree),false_output)\n",
+    "        \n",
+    "        #returning tree node\n",
     "        return Node\n",
+    "    \n",
     "    #function to predict the output\n",
     "    def predict(self,x):\n",
     "        x=np.array(x)\n",
@@ -928,6 +932,8 @@
     "        for i in range(len(x)):\n",
     "            y_pred.append(self.predict_one(x[i]))\n",
     "        return np.array(y_pred)\n",
+    "    \n",
+    "    #helper function for predict\n",
     "    def predict_one(self,x):\n",
     "        x=np.array(x)\n",
     "        root=self.tree\n",
@@ -947,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
